Improved CallLog UI && fixed bug for messages comparator

--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -7,15 +7,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent">
-    <Button
-        android:id="@+id/incomingDuration_btn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#c1838d"
-        android:textColor="#fff"
-        android:text="Incoming calls duration"/>
+        android:background="@drawable/line"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <Button
+            android:id="@+id/incomingDuration_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/line"
+            android:textColor="#51443c"
+            android:gravity="center"
+            android:text="Incoming calls duration"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+    </LinearLayout>
 
-        <LinearLayout
+
+    <LinearLayout
         android:id="@+id/incomingDuration_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,16 +44,28 @@ android:layout_height="match_parent">
             android:id="@+id/idPieChartIncomingDuration"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
-
-
-    <Button
-        android:id="@+id/outgoingDuration_btn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:textColor="#fff"
-        android:background="#c1838d"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:text="Outgoing calls duration"/>
+        android:background="@drawable/line"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <Button
+            android:id="@+id/outgoingDuration_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/line"
+            android:textColor="#51443c"
+            android:gravity="center"
+            android:text="Outgoing calls duration"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/outgoingDuration_layout"
@@ -54,15 +81,28 @@ android:layout_height="match_parent">
             android:id="@+id/idPieChartOutgoingDuration"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/outgoingFrequency_btn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:textColor="#fff"
-        android:background="#c1838d"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:text="OUTGOING CALLS FREQUENCY"/>
+        android:background="@drawable/line"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <Button
+            android:id="@+id/outgoingFrequency_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/line"
+            android:textColor="#51443c"
+            android:gravity="center"
+            android:text="OUTGOING CALLS FREQUENCY"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/outgoingFrequency_layout"
@@ -78,15 +118,29 @@ android:layout_height="match_parent">
             android:id="@+id/idPieChartOutgoingFrequency"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/incomingFrequency_btn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#c1838d"
-        android:layout_marginTop="10dp"
-        android:textColor="#fff"
-        android:text="INCOMING CALLS FREQUENCY"/>
+        android:background="@drawable/line"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <Button
+            android:id="@+id/incomingFrequency_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/line"
+            android:textColor="#51443c"
+            android:gravity="center"
+            android:text="INCOMING CALLS FREQUENCY"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:id="@+id/incomingFrequency_layout"
@@ -102,15 +156,29 @@ android:layout_height="match_parent">
             android:id="@+id/idPieChartIncomingFrequency"></com.github.mikephil.charting.charts.PieChart>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/missed_btn"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#c1838d"
-        android:layout_marginTop="10dp"
-        android:textColor="#fff"
-        android:text="Missed calls"/>
+        android:background="@drawable/line"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <Button
+            android:id="@+id/missed_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/line"
+            android:textColor="#51443c"
+            android:gravity="center"
+            android:text="Missed calls"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/missed_layout"
