--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -26,6 +26,7 @@ android:layout_height="match_parent">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:clickable="true"
             android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
     </LinearLayout>
 
@@ -63,6 +64,7 @@ android:layout_height="match_parent">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:clickable="true"
             android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
     </LinearLayout>
 
@@ -100,6 +102,7 @@ android:layout_height="match_parent">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:clickable="true"
             android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
     </LinearLayout>
 
@@ -137,6 +140,7 @@ android:layout_height="match_parent">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:clickable="true"
             android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
     </LinearLayout>
 
@@ -175,6 +179,7 @@ android:layout_height="match_parent">
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:clickable="true"
             android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
 
     </LinearLayout>
