--- a/app/src/main/res/drawable/ic_icons8_search.xml
+++ b/app/src/main/res/drawable/ic_icons8_search.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="32.0"
         android:viewportHeight="32.0">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#51443c"
         android:pathData="M19,3C13.49,3 9,7.49 9,13C9,15.39 9.84,17.59 11.25,19.31L3.28,27.28L4.72,28.72L12.69,20.75C14.41,22.16 16.61,23 19,23C24.51,23 29,18.51 29,13C29,7.49 24.51,3 19,3ZM19,5C23.43,5 27,8.57 27,13C27,17.43 23.43,21 19,21C14.57,21 11,17.43 11,13C11,8.57 14.57,5 19,5Z"/>
 </vector>
