Added the Navigation statisticts fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,8 @@
 
             <ListView
                 android:id="@+id/favoritePeople_list"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
