--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,12 @@
             android:id="@+id/nav_apps"
             android:icon="@drawable/ic_icons8_google_mobile"
             android:title="Applications" />
+
+        <item
+            android:id="@+id/nav_network"
+            android:icon="@drawable/ic_network_check_black_24dp"
+            android:title="Network" />
     </group>
 
 </menu>
+
