Added Call functionality on PeopleDetailsFragment

--- a/app/src/main/res/layout/fragment_people_details.xml
+++ b/app/src/main/res/layout/fragment_people_details.xml
@@ -36,6 +36,7 @@
             android:padding="5pt"
             android:layout_weight="0.5"
             android:text="TextView" />
+
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -56,6 +57,8 @@
             android:layout_height="wrap_content"
             android:padding="5pt"
             android:background="@drawable/line"
+            android:drawableRight="@drawable/ic_call_black_20dp"
+            android:foreground="?attr/selectableItemBackground"
             android:text="TextView" />
     </LinearLayout>
     <TextView
